--- a/templates/sti.html
+++ b/templates/sti.html
@@ -176,7 +176,7 @@
                 <label for="treatment_unique_id">Unique ID</label>
                 </div>
                 <div class="col-7">
-                <input type="text" name="treatment_unique_id" id="treatment_unique_id" value="{{ client_treatment_sti.treatment_unique_id }}">
+                <input type="text" name="treatment_unique_id" id="treatment_unique_id" value="{{ client.treatment_unique_id }}">
                 </div>
                 </div>
                 <hr/>
